more white space around tooltip and infowindows

--- a/css/afterfibre.css
+++ b/css/afterfibre.css
@@ -46,3 +46,11 @@ div.nav
     text-align: center; 
     border: 0;
 }
+div.cartodb-popup.v2 {
+    border-radius: 5px;
+    padding: 5px;
+}
+
+div.cartodb-tooltip-content-wrapper {
+    padding: 5px;
+}
