added tweet to correct feature and glow-on-select for undersea cables

--- a/css/afterfibre.css
+++ b/css/afterfibre.css
@@ -94,18 +94,117 @@ div.cartodb-tooltip-content-wrapper {
 div.cartodb-tooltip-content-wrapper img {
     padding: 0 !important;
 }
-div#nsrcTitle{
+div#nsrcTitle {
     position: absolute;
     left: 60px;
     bottom: 60px;
     z-index: 3;
 }
 
-div#mapTitle{
+div.mapTitle {
     width: 200px;
     font-family: "europa-1", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 24px;
     color: white;
     font-weight: 600;
     text-align: center;
+}
+
+.mapLinks a {
+    outline: none;
+    color: #0059B0;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.15em;
+}
+
+.mapLinks a:hover,
+.mapLinks a:focus {
+    outline: none;
+}
+
+.mapLinks a::after {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: green;
+    content: '';
+    opacity: 0;
+    -webkit-transition: height 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+    -moz-transition: height 0.3s, opacity 0.3s, -moz-transform 0.3s;
+    transition: height 0.3s, opacity 0.3s, transform 0.3s;
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    transform: translateY(-10px);
+}
+
+div.mapLinks {
+    width: 200px;
+    font-family: "europa-1", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    color: white;
+    font-weight: 600;
+    text-align: center;
+}
+
+div.left {
+    float: left;
+}
+
+div.right {
+    float: right;
+}
+
+.modalDialog {
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+}
+.modalDialog:target {
+    opacity:1;
+    pointer-events: auto;
+}
+.modalDialog > div {
+    width: 400px;
+    position: relative;
+    margin: 10% auto;
+    padding: 5px 20px 13px 20px;
+    border-radius: 10px;
+    background: #fff;
+    background: -moz-linear-gradient(#fff, #999);
+    background: -webkit-linear-gradient(#fff, #999);
+    background: -o-linear-gradient(#fff, #999);
+}
+.close {
+    background: #606061;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
+}
+.close:hover {
+    background: #00d9ff;
 }
