--- a/css/afterfibre.css
+++ b/css/afterfibre.css
@@ -111,6 +111,15 @@ div.mapTitle {
     text-align: center;
 }
 
+div.mapTitleLight {
+    width: 200px;
+    font-family: "europa-1", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 24px;
+    color: #0059B0;
+    font-weight: 600;
+    text-align: center;
+}
+
 .mapLinks a {
     outline: none;
     color: #0059B0;
